# gpsnavi

./: .gitignore  Makefile.am  README.md  README_GENIVI.md  configure.ac  kill_all  run  run_hmi  run_navi  weston.ini
src/: Makefile.am
src/api/: genivi-mapviewer-configuration_adaptor.h  genivi-mapviewer-constants.h  genivi-mapviewer-mapviewercontrol_adaptor.h  genivi-mapviewer-session_adaptor.h  genivi-mapviewer.cpp  genivi-mapviewer.h  genivi-navicore.cpp  genivi-navicore.h  genivi-navigationcore-configuration_adaptor.h  genivi-navigationcore-constants.h  genivi-navigationcore-guidance_adaptor.h  genivi-navigationcore-locationinput_adaptor.h  genivi-navigationcore-mapmatchedposition_adaptor.h  genivi-navigationcore-routing_adaptor.h  genivi-navigationcore-session_adaptor.h  server.cpp  server.h
src/glview/: glview_wayland.c
src/hmi/: CMakeLists.txt  prepare.sh
src/hmi/gimp/genivi-theme/800x480/: NavigationAppBrowseMapBottom.xcf
src/hmi/hmi-launcher/: CMakeLists.txt  main.cpp
src/hmi/qml/: NavigationAppBrowseMap.qml  NavigationAppTokyo.qml  navigation.qmlproject
src/hmi/qml/Core/: genivi.js  resource.js
src/main/: navi.c
test/: test-guidance.py  test-map-viewer-control.py  test-route-calculation.py
